# retro-fortress-2-goldsrc

./: CMakeLists.txt  README.md
include/retro_fortress/common/: class_profiles.hpp  goldsrc_stub.hpp
include/retro_fortress/server/: game_manager.hpp  logging.hpp  player_class.hpp  team.hpp
src/client/: client_module.cpp
src/common/: class_profiles.cpp  goldsrc_stub.cpp
src/server/: game_manager.cpp  logging.cpp  mod.cpp  player_class.cpp  team.cpp
